--- a/src/styles/Donate.css
+++ b/src/styles/Donate.css
@@ -1,6 +1,7 @@
 /* src/styles/Donate.css */
 .donate-page {
     padding: 20px;
+    overflow-y: scroll;
   }
   
   .campaign-list {
@@ -23,4 +24,6 @@
     border: 1px solid #ccc;
     border-radius: 8px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    overflow-y: scroll;
+    
   }
