import app.css into boost

--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,13 @@ body {
   overflow-y: auto;
 }
 
-
+.hide-scrollbar {
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+}
+.hide-scrollbar::-webkit-scrollbar {
+  display: none;
+}
 
 
 .cards__container{
