hide scrollbar at boost

--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,13 @@ body {
   display: none;
 }
 
+.hide-scrollbar {
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+}
+.hide-scrollbar::-webkit-scrollbar {
+  display: none;
+}
 
 .cards__container{
   display: flex;
