--- a/src/App.css
+++ b/src/App.css
@@ -139,7 +139,7 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  background: url("/public/preloader.png") no-repeat center center;
+  background: url("/public/preloader.svg") no-repeat center center;
   background-size: cover;
   display: flex;
   justify-content: center;
