--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@
 body {
   margin: 0;
   -webkit-overflow-scrolling: touch;
-  font-family: "Roboto Condensed", sans-serif;
+  font-family: "Poppins", sans-serif;
   font-optical-sizing: auto;
   font-style: normal;
   -webkit-font-smoothing: antialiased;
