--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 body {
   background: linear-gradient(to bottom, #d9dce4, #5496ff); /* Fallback gradient */
-  background-image: url('./images/background-forest.jpg');
+  /*background-image: url('./images/background-forest.jpg');*/
   background-size: cover;
   
   background-position: center;
