--- a/src/App.css
+++ b/src/App.css
@@ -273,7 +273,7 @@ body {
 
 
 .taskbg{
-  background: linear-gradient(to bottom, #d9dce4, #5496ff);
+  background: #68a2ff;
   color: #fff;
   height: var(--tg-viewport-stable-height);
   touch-action: none; /* Prevent touch actions */
