--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,13 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
 body {
   background: linear-gradient(to bottom, #d9dce4, #5496ff); /* Fallback gradient */
   /*background-image: url('./images/background-forest.jpg');*/
   background-size: cover;
-  
+  min-height: 100vh;
   background-position: center;
   color: #b9b9b9;
   height: var(--tg-viewport-stable-height);
@@ -16,6 +21,24 @@ body {
 .body::-webkit-scrollbar {
   display: none;
 }
+
+
+/* Custom animation for shimmer effect */
+@keyframes shimmer {
+  0% {
+    background-position: -1000px 0;
+  }
+  100% {
+    background-position: 1000px 0;
+  }
+}
+
+.animate-shimmer {
+  animation: shimmer 2s infinite linear;
+  background: linear-gradient(to right, #f6f7f8 0%, #edeef1 20%, #f6f7f8 40%, #f6f7f8 100%);
+  background-size: 1000px 100%;
+}
+
 
 .hide-scrollbar {
   scrollbar-width: none;
